--- a/public/global.css
+++ b/public/global.css
@@ -35,12 +35,101 @@
 	--bg-primary: #121213;
 
 	--red: #9C2323;
-	--color-present: "../../../public/tiles/slotYellow.png";
-	--color-correct: "../../../public/tiles/slotGreen.png";
-	--color-absent: "../../../public/tiles/slotDarkGray.png";
-	--evaluated-key-color: "../../../public/tiles/slotDarkGray.png";
-	--key-bg: "../../../public/tiles/slotGray.png";
+	--color-present: url("../../../public/tiles/slotYellow.png");
+	--color-correct: url("../../../public/tiles/slotGreen.png");
+	--color-absent: url("../../../public/tiles/slotDarkGray.png");
+	--evaluated-key-color: url("../../../public/tiles/slotDarkGray.png");
+	--key-bg: url("../../../public/tiles/slotGray.png");
 
+	--artifact3_1:url("../../../public/artifactArt/CuriosCoots1.png");
+	--artifact3_2:url("../../../public/artifactArt/CuriosCoots2.png");
+	--artifact3_3:url("../../../public/artifactArt/CuriosCoots3.png");
+	--artifact3_4:url("../../../public/artifactArt/CuriosCoots4.png");
+	--artifact3_5:url("../../../public/artifactArt/CuriosCoots5.png");
+	--artifact3_6:url("../../../public/artifactArt/CuriosCoots6.png");
+	--artifact3_7:url("../../../public/artifactArt/CuriosCoots7.png");
+
+	--artifact4:url("../../../public/artifactArt/ArtifactSeeker.png");
+	--artifact5:url("../../../public/artifactArt/Thaumsaurus.png");
+	--artifact24:url("../../../public/artifactArt/RandomiserRocket.png");
+	--artifact25:url("../../../public/artifactArt/Wormhole.png");
+	--artifact32:url("../../../public/artifactArt/LuckyCat.png");
+	--artifact67:url("../../../public/artifactArt/BrainInAJar.png");
+	--artifact8:url("../../../public/artifactArt/GoldenPortal.png");
+	--artifact9:url("../../../public/artifactArt/GreyRabbit.png");
+	--artifact10:url("../../../public/artifactArt/ShadowScrutinizer.png");
+	--artifact11:url("../../../public/artifactArt/VigilantHunter.png");
+	--artifact14:url("../../../public/artifactArt/Freestyle.png");
+	--artifact38:url("../../../public/artifactArt/CatLikeClarity.png");
+	--artifact44:url("../../../public/artifactArt/RandomPurrfector.png");
+	--artifact26:url("../../../public/artifactArt/RareLetterPortal.png");
+	--artifact40:url("../../../public/artifactArt/CosmicConsonant.png");
+	--artifact41:url("../../../public/artifactArt/Mevowel.png");
+	--artifact59:url("../../../public/artifactArt/GoldenKey.png");
+	--artifact60:url("../../../public/artifactArt/SilverKey.png");
+	--artifact62:url("../../../public/artifactArt/SkeletonKey.png");
+	--artifact15:url("../../../public/artifactArt/NounRocket.png");
+	--artifact16:url("../../../public/artifactArt/VirtuousVerbs.png");
+	--artifact17:url("../../../public/artifactArt/AdjectiveArchfiend.png");
+	--artifact18:url("../../../public/artifactArt/AdverbAffection.png");
+
+	--artifact12_A:url("../../../public/artifactArt/AlphabetRouletteA.png");
+	--artifact12_B:url("../../../public/artifactArt/AlphabetRouletteB.png");
+	--artifact12_C:url("../../../public/artifactArt/AlphabetRouletteC.png");
+	--artifact12_D:url("../../../public/artifactArt/AlphabetRouletteD.png");
+	--artifact12_E:url("../../../public/artifactArt/AlphabetRouletteE.png");
+	--artifact12_F:url("../../../public/artifactArt/AlphabetRouletteF.png");
+	--artifact12_G:url("../../../public/artifactArt/AlphabetRouletteG.png");
+	--artifact12_H:url("../../../public/artifactArt/AlphabetRouletteH.png");
+	--artifact12_I:url("../../../public/artifactArt/AlphabetRouletteI.png");
+	--artifact12_J:url("../../../public/artifactArt/AlphabetRouletteJ.png");
+	--artifact12_K:url("../../../public/artifactArt/AlphabetRouletteK.png");
+	--artifact12_L:url("../../../public/artifactArt/AlphabetRouletteL.png");
+	--artifact12_M:url("../../../public/artifactArt/AlphabetRouletteM.png");
+	--artifact12_N:url("../../../public/artifactArt/AlphabetRouletteN.png");
+	--artifact12_O:url("../../../public/artifactArt/AlphabetRouletteO.png");
+	--artifact12_P:url("../../../public/artifactArt/AlphabetRouletteP.png");
+	--artifact12_Q:url("../../../public/artifactArt/AlphabetRouletteQ.png");
+	--artifact12_R:url("../../../public/artifactArt/AlphabetRouletteR.png");
+	--artifact12_S:url("../../../public/artifactArt/AlphabetRouletteS.png");
+	--artifact12_T:url("../../../public/artifactArt/AlphabetRouletteT.png");
+	--artifact12_U:url("../../../public/artifactArt/AlphabetRouletteU.png");
+	--artifact12_V:url("../../../public/artifactArt/AlphabetRouletteV.png");
+	--artifact12_W:url("../../../public/artifactArt/AlphabetRouletteW.png");
+	--artifact12_X:url("../../../public/artifactArt/AlphabetRouletteX.png");
+	--artifact12_Y:url("../../../public/artifactArt/AlphabetRouletteY.png");
+	--artifact12_Z:url("../../../public/artifactArt/AlphabetRouletteZ.png");
+
+	--artifact13_a:url("../../../public/artifactArt/ConjureConclusionA.png");
+	--artifact13_b:url("../../../public/artifactArt/ConjureConclusionB.png");
+	--artifact13_c:url("../../../public/artifactArt/ConjureConclusionC.png");
+	--artifact13_d:url("../../../public/artifactArt/ConjureConclusionD.png");
+	--artifact13_e:url("../../../public/artifactArt/ConjureConclusionE.png");
+	--artifact13_f:url("../../../public/artifactArt/ConjureConclusionF.png");
+	--artifact13_g:url("../../../public/artifactArt/ConjureConclusionG.png");
+	--artifact13_h:url("../../../public/artifactArt/ConjureConclusionH.png");
+	--artifact13_i:url("../../../public/artifactArt/ConjureConclusionI.png");
+	--artifact13_j:url("../../../public/artifactArt/ConjureConclusionJ.png");
+	--artifact13_k:url("../../../public/artifactArt/ConjureConclusionK.png");
+	--artifact13_l:url("../../../public/artifactArt/ConjureConclusionL.png");
+	--artifact13_m:url("../../../public/artifactArt/ConjureConclusionM.png");
+	--artifact13_n:url("../../../public/artifactArt/ConjureConclusionN.png");
+	--artifact13_o:url("../../../public/artifactArt/ConjureConclusionO.png");
+	--artifact13_p:url("../../../public/artifactArt/ConjureConclusionP.png");
+	--artifact13_q:url("../../../public/artifactArt/ConjureConclusionQ.png");
+	--artifact13_r:url("../../../public/artifactArt/ConjureConclusionR.png");
+	--artifact13_s:url("../../../public/artifactArt/ConjureConclusionS.png");
+	--artifact13_t:url("../../../public/artifactArt/ConjureConclusionT.png");
+	--artifact13_u:url("../../../public/artifactArt/ConjureConclusionU.png");
+	--artifact13_v:url("../../../public/artifactArt/ConjureConclusionV.png");
+	--artifact13_w:url("../../../public/artifactArt/ConjureConclusionW.png");
+	--artifact13_x:url("../../../public/artifactArt/ConjureConclusionX.png");
+	--artifact13_y:url("../../../public/artifactArt/ConjureConclusionY.png");
+	--artifact13_z:url("../../../public/artifactArt/ConjureConclusionZ.png");
+	--a1:var(--artifact3_1);
+	--a2:var(--artifact3_2);
+	--a3:var(--artifact3_3);
+	--a4:var(--artifact3_4);
 }
 
 body {
@@ -58,16 +147,16 @@ body {
 	--bg-primary: #ffffff;
 
 	--red: #C42C2C;
-	--color-present: "../../../public/tiles/slotYellow.png";
-	--color-correct: "../../../public/tiles/slotGreen.png";
-	--color-absent: "../../../public/tiles/slotDarkGray.png";
-	--evaluated-key-color: "../../../public/tiles/slotDarkGray.png"
-	--key-bg: "../../../public/tiles/slotGray.png";
+	--color-present: url("../../../public/tiles/slotYellow.png");
+	--color-correct: url("../../../public/tiles/slotGreen.png");
+	--color-absent: url("../../../public/tiles/slotDarkGray.png");
+	--evaluated-key-color: url("../../../public/tiles/slotDarkGray.png");
+	--key-bg: url("../../../public/tiles/slotGray.png");
 }
 
 .colorblind {
-	--color-correct: "../../../public/tiles/slotRed.png";
-	--color-present: "../../../public/tiles/slotBlue.png";
+	--color-correct: url("../../../public/tiles/slotRed.png");
+	--color-present: url("../../../public/tiles/slotBlue.png");
 }
 
 h3 {
@@ -124,7 +213,7 @@ a:visited {
 	margin-left: var(--padding);
 	border-radius: 4px;
 	color: white;
-	background: var(--color-correct);
+	background: gray;
 	cursor: pointer;
 }
 
