--- a/public/global.css
+++ b/public/global.css
@@ -73,32 +73,32 @@
 	--artifact17:url("../../../public/artifactArt/AdjectiveArchfiend.png");
 	--artifact18:url("../../../public/artifactArt/AdverbAffection.png");
 
-	--artifact12_A:url("../../../public/artifactArt/AlphabetRouletteA.png");
-	--artifact12_B:url("../../../public/artifactArt/AlphabetRouletteB.png");
-	--artifact12_C:url("../../../public/artifactArt/AlphabetRouletteC.png");
-	--artifact12_D:url("../../../public/artifactArt/AlphabetRouletteD.png");
-	--artifact12_E:url("../../../public/artifactArt/AlphabetRouletteE.png");
-	--artifact12_F:url("../../../public/artifactArt/AlphabetRouletteF.png");
-	--artifact12_G:url("../../../public/artifactArt/AlphabetRouletteG.png");
-	--artifact12_H:url("../../../public/artifactArt/AlphabetRouletteH.png");
-	--artifact12_I:url("../../../public/artifactArt/AlphabetRouletteI.png");
-	--artifact12_J:url("../../../public/artifactArt/AlphabetRouletteJ.png");
-	--artifact12_K:url("../../../public/artifactArt/AlphabetRouletteK.png");
-	--artifact12_L:url("../../../public/artifactArt/AlphabetRouletteL.png");
-	--artifact12_M:url("../../../public/artifactArt/AlphabetRouletteM.png");
-	--artifact12_N:url("../../../public/artifactArt/AlphabetRouletteN.png");
-	--artifact12_O:url("../../../public/artifactArt/AlphabetRouletteO.png");
-	--artifact12_P:url("../../../public/artifactArt/AlphabetRouletteP.png");
-	--artifact12_Q:url("../../../public/artifactArt/AlphabetRouletteQ.png");
-	--artifact12_R:url("../../../public/artifactArt/AlphabetRouletteR.png");
-	--artifact12_S:url("../../../public/artifactArt/AlphabetRouletteS.png");
-	--artifact12_T:url("../../../public/artifactArt/AlphabetRouletteT.png");
-	--artifact12_U:url("../../../public/artifactArt/AlphabetRouletteU.png");
-	--artifact12_V:url("../../../public/artifactArt/AlphabetRouletteV.png");
-	--artifact12_W:url("../../../public/artifactArt/AlphabetRouletteW.png");
-	--artifact12_X:url("../../../public/artifactArt/AlphabetRouletteX.png");
-	--artifact12_Y:url("../../../public/artifactArt/AlphabetRouletteY.png");
-	--artifact12_Z:url("../../../public/artifactArt/AlphabetRouletteZ.png");
+	--artifact12_a:url("../../../public/artifactArt/AlphabetRouletteA.png");
+	--artifact12_b:url("../../../public/artifactArt/AlphabetRouletteB.png");
+	--artifact12_c:url("../../../public/artifactArt/AlphabetRouletteC.png");
+	--artifact12_d:url("../../../public/artifactArt/AlphabetRouletteD.png");
+	--artifact12_e:url("../../../public/artifactArt/AlphabetRouletteE.png");
+	--artifact12_f:url("../../../public/artifactArt/AlphabetRouletteF.png");
+	--artifact12_g:url("../../../public/artifactArt/AlphabetRouletteG.png");
+	--artifact12_h:url("../../../public/artifactArt/AlphabetRouletteH.png");
+	--artifact12_i:url("../../../public/artifactArt/AlphabetRouletteI.png");
+	--artifact12_j:url("../../../public/artifactArt/AlphabetRouletteJ.png");
+	--artifact12_k:url("../../../public/artifactArt/AlphabetRouletteK.png");
+	--artifact12_l:url("../../../public/artifactArt/AlphabetRouletteL.png");
+	--artifact12_m:url("../../../public/artifactArt/AlphabetRouletteM.png");
+	--artifact12_n:url("../../../public/artifactArt/AlphabetRouletteN.png");
+	--artifact12_o:url("../../../public/artifactArt/AlphabetRouletteO.png");
+	--artifact12_p:url("../../../public/artifactArt/AlphabetRouletteP.png");
+	--artifact12_q:url("../../../public/artifactArt/AlphabetRouletteQ.png");
+	--artifact12_r:url("../../../public/artifactArt/AlphabetRouletteR.png");
+	--artifact12_s:url("../../../public/artifactArt/AlphabetRouletteS.png");
+	--artifact12_t:url("../../../public/artifactArt/AlphabetRouletteT.png");
+	--artifact12_u:url("../../../public/artifactArt/AlphabetRouletteU.png");
+	--artifact12_v:url("../../../public/artifactArt/AlphabetRouletteV.png");
+	--artifact12_w:url("../../../public/artifactArt/AlphabetRouletteW.png");
+	--artifact12_x:url("../../../public/artifactArt/AlphabetRouletteX.png");
+	--artifact12_y:url("../../../public/artifactArt/AlphabetRouletteY.png");
+	--artifact12_z:url("../../../public/artifactArt/AlphabetRouletteZ.png");
 
 	--artifact13_a:url("../../../public/artifactArt/ConjureConclusionA.png");
 	--artifact13_b:url("../../../public/artifactArt/ConjureConclusionB.png");
